--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Hello, world! I'm David Freeman
+title: Hola, mundo! Soy José Luis Molero
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Esta es sólo una muestras de mis trabajos como editor y copywriter en castellano,
+  así como traductor inglés-español
 permalink: ':title/'
 baseurl: "/betaBlog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -10,13 +9,14 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: José Luis Molero # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: Escritor y traductor de textos especializado en tecnología. # add description
+author-img: jlmolero.jpg # add your photo
+about-author: Escritor y traductor de textos especializado en tecnología, energías alternativas, TV y
+  deportes. # add description
 twitter: jlmolero # add your Twitter handle
 facebook: # add your Facebook handle
 github: jlmolero # add your Github handle
 linkedin: # add your Linkedin handle
-email: # add your Email address
+email: jlmolero@gmail.com # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
